feature: replaced some hardcoded values with vars

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,9 +1,11 @@
 ---
-mirror_archs:
-- amd64
-- i386
+mirror_archs: ['amd64', 'i386']
 mirror_base: /var/apt-mirror
-mirror_codenames:
-- bionic
-mirror_src: archive.ubuntu.com
+mirror_codenames: ['bionic']
+mirror_cron_day_clean: '2'    # Tuesday
+mirror_cron_day_refresh: '3'  # Wednesday
+mirror_dirs: [{path: '{{mirror_base}}/var', mode: '0755'}]
+mirror_num_threads: 3
+mirror_pkgs: ['apt-mirror']
+mirror_src: 'archive.ubuntu.com'
 ...
