--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,7 +1,11 @@
 ---
-- name: 'handler_restart_nginx'
-  systemd:
+# --------------------------------
+
+- name: "Handler_Restart_Nginx"
+  ansible.builtin.systemd:
     name: nginx
     state: restarted
   become: true
+
+# --------------------------------
 ...
