--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,68 +1,63 @@
 ---
-- name: 'install packages'
-  apt:
-    name: '{{mirror_pkgs}}'
+# --------------------------------
+
+- name: "Install packages"
+  ansible.builtin.apt:
+    name: "{{ mirror_pkgs }}"
     state: present
   become: true
-  tags:
-  - ct-aptmirror
-  - ct-aptmirror-pkg
+  tags: [ct-aptmirror]
 
-- name: 'sort out directories'
-  file:
-    mode: '{{item.mode}}'
-    path: '{{item.path}}'
+- name: "Sort out directories"
+  ansible.builtin.file:
+    mode: "{{ item.mode }}"
+    path: "{{ item.path }}"
     state: directory
-  loop: '{{mirror_dirs}}'
+  loop: "{{ mirror_dirs }}"
   become: true
-  tags:
-  - ct-aptmirror
+  tags: [ct-aptmirror]
 
-- name: 'prepare mirror list'
-  template:
+- name: "Prepare mirror list"
+  ansible.builtin.template:
     src: mirror.list.j2
-    dest: '/etc/apt/mirror.list'
-    mode: '0644'
+    dest: "/etc/apt/mirror.list"
+    mode: "0644"
   become: true
-  tags:
-  - ct-aptmirror
+  tags: [ct-aptmirror]
 
-- name: 'copy postmirror script over'
-  copy:
+- name: "Copy postmirror script over"
+  ansible.builtin.copy:
     src: postmirror.sh
-    dest: '{{mirror_base}}/var/postmirror.sh'
-    mode: '0744'
+    dest: "{{ mirror_base }}/var/postmirror.sh"
+    mode: "0744"
   become: true
-  tags:
-  - ct-aptmirror
+  tags: [ct-aptmirror]
 
-- name: 'cron job for weekly clean up'
-  cron:
-    name: 'apt-mirror-clean-weekly'
+- name: "Cron job for weekly clean up"
+  ansible.builtin.cron:
+    name: "apt-mirror-clean-weekly"
     state: present
     disabled: false
     user: root
-    minute: '05'
-    hour: '22'
-    job: '{{mirror_base}}/var/clean.sh'
-    weekday: '{{mirror_cron_day_clean}}'
+    minute: "05"
+    hour: "22"
+    job: "{{ mirror_base }}/var/clean.sh"
+    weekday: "{{ mirror_cron_day_clean }}"
   become: true
-  tags:
-  - ct-aptmirror
-  - ct-aptmirror-cron
+  tags: [ct-aptmirror]
 
-- name: 'schedule weekly updates by cron'
-  cron:
-    name: 'apt-mirror-weekly'
+- name: "Schedule weekly updates by cron"
+  ansible.builtin.cron:
+    name: "apt-mirror-weekly"
     state: present
     disabled: false
     user: root
-    minute: '05'
-    hour: '02'
+    minute: "05"
+    hour: "02"
     job: /usr/bin/apt-mirror
-    weekday: '{{mirror_cron_day_refresh}}'
+    weekday: "{{ mirror_cron_day_refresh }}"
   become: true
-  tags:
-  - ct-aptmirror
-  - ct-aptmirror-cron
+  tags: [ct-aptmirror]
+
+# --------------------------------
 ...
