--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,14 +2,14 @@
 # --------------------------------
 
 dependencies:
-- {src: 'git+https://github.com/cabtech/ansible-role-app-nginx.git', version: '1.1.0'}
+- {src: "git+https://github.com/cabtech/ansible-role-app-nginx.git", version: "1.1.0"}
 
 galaxy_info:
   author: Tim Short
   description: Sets up an APT mirror
   galaxy_tags: [packages]
   license: GPL v3
-  role_name: ansible_role_app_datadog
+  role_name: ansible_role_app_aptmirror
   min_ansible_version: "2"
   namespace: cabtech
   platforms:
